fixes issue with overflowing tags

--- a/src/styles/Tags.module.scss
+++ b/src/styles/Tags.module.scss
@@ -16,5 +16,7 @@
 
   @include mq(mobile) {
     width: 100%;
+    max-width: 16em;
+    overflow: auto;
   }
 }
